This commit includes changes in the html file and css file, adding JS capabilites such as typing animation and some css and few html and css features

--- a/front.html
+++ b/front.html
@@ -19,7 +19,8 @@
       </head>
     <body>
      
-        
+        <h1>I'm a CyberSecurity Administrator</h1>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
