--- a/front.html
+++ b/front.html
@@ -11,15 +11,17 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <div class="header-center">
-          <a class="Projects" href="Projects">Projects</a>
-          <a href="About">About</a>
-          <a href="Contact">Contact</a>
-        </div>
-
+        
       </head>
     <body>
-     <Canvas id="canvas"></Canvas> <!--for the graphics of the page and dynamics-->
+      <!--Begining of Navigation-->
+      <div class="header-center">
+        <a class="Projects" href="Projects">Projects</a>
+        <a href="About">About</a>
+        <a href="Contact">Contact</a>
+      </div>
+
+
         <div class="container">
         <h1>I'm <span class="auto-type"></span></h1> 
         </div>
