Completed Navigation Bar design and animations, Next will work on vibrant color scheme

--- a/front.html
+++ b/front.html
@@ -22,7 +22,7 @@
       <!--Begining of Navigation-->
       <header class="header" id ="header">   
         <nav class="navcontainer">
-          <a href="#" class = "navlogo">Logo</a>
+          <a href="#" class = "navlogo">Omar</a>
           <div class ="nav__menu" id="nav-menu">
            <ul class = nav_list>
               <li class = "nav__item">
