Created and uploaded logo to the personal site, adjusted the navbar to be aligned with the logo.

--- a/front.html
+++ b/front.html
@@ -22,7 +22,9 @@
       <!--Begining of Navigation-->
       <header class="header" id ="header">   
         <nav class="navcontainer">
-          <a href="#" class = "navlogo">Omar</a>
+          <a href="#" class = "navlogo">
+            <img src="ODesignPortfolio.png" alt="Omar Logo" class="navlogo-img" />
+          </a>
           <div class ="nav__menu" id="nav-menu">
            <ul class = nav_list>
               <li class = "nav__item">
@@ -53,7 +55,7 @@
                 </a>
               </li>
            </ul> 
-           <!--Close nav button-->>
+           <!--Close nav button-->
            <div class="nav__close" id ="nav-close">
             <i class="ri-close-large-line"></i>
            </div>
