Added dynamic blog preview section, along with css hover animations, Javascript functionality for links to Html pages and card layout.

--- a/front.html
+++ b/front.html
@@ -87,7 +87,9 @@
         
         <section class="section" id="blog">
           <h2>Blog</h2>
-          <p>Welcome to my blog! Here I share insights on cybersecurity, programming, and tech trends.</p>
+          <div class= "blog-previews" id="blog-previews">
+            <!-- Blog cards will be injected here by JavaScript -->
+          </div>
         </section>
         
         <section class="section" id="projects">
