Cleaned up blog section titles, updated about me section. Added ImpelBrowser Extension blog title.

--- a/blogs/aboutme.html
+++ b/blogs/aboutme.html
@@ -9,7 +9,9 @@
     <section class="section" id="about-me">
         <h2>About Me</h2>
         <p>
-            Hi, I'm Omar—a dedicated cybersecurity professional with a passion for technology and innovation. My interests span cybersecurity, programming, Azure, AI in security, and cloud computing. I am especially fascinated by the integration of AI in cybersecurity, implementing automated SIEM tools, and leveraging intelligent solutions to protect digital assets.
+            Hi, I'm Omar—a dedicated cybersecurity professional with a passion for technology and innovation. 
+            My interests span cybersecurity, programming, Azure Cloud, AI in security, and cloud computing. 
+            I am especially fascinated by the integration of AI in cybersecurity, implementing automated SIEM tools, and leveraging intelligent solutions to protect digital assets.
         </p>
         <p>
             Outside of tech, I'm a long-time basketball player and athlete who enjoys the challenge of both the court and the keyboard. I love programming, building new things, and the thrill of securing applications or testing the limits of seemingly invulnerable systems.
@@ -26,6 +28,7 @@
             <li>Microsoft Certified: Security, Compliance, and Identity Fundamentals (SC-900)</li>
             <li>CompTIA A+</li>
             <li>CompTIA Security+ (in progress)</li>
+            <li>CompTIA Network+</li>
         </ul>
         <h3>Key Interests</h3>
         <ul>
