--- a/front.html
+++ b/front.html
@@ -86,7 +86,7 @@
         </section>
         
         <section class="section" id="blog">
-          <h2>Blog</h2>
+          <h2 id = "blog-header">Blog</h2>
           <div class= "blog-previews" id="blog-previews">
             <!-- Blog cards will be injected here by JavaScript -->
           </div>
