Worked on the Az-500 blog post, adding on to resources utilized and exam objectives.

--- a/blogs/Az500.html
+++ b/blogs/Az500.html
@@ -14,7 +14,21 @@
     <main>
         <section>
             <h2>Studying for AZ-500</h2>
-            <p>Let me start by saying that I passed the AZ-500 on my second try. </p>
+            <p>Let me start by saying that I passed the AZ-500 on my second try. The certification exam was 
+                undoubtly one of the most difficult exam I've ever taken.<br> The Azure 500 Security Technologies
+            certification covers a wide variety of Azure Security topics, such as: <br> 
+            <br>
+            <ul>
+                <li>Securing Identity and Access</li>
+                <li>Secure Networking</li>
+                <li>Secure Compute, storage, and databases</li>
+                <li>Secure Azure using Defender and Sentinel</li>
+
+            </ul>
+              
+
+            </p>
+
         </section>
         <section>
             <h2>Key Topics Covered</h2>
