--- a/blogs/Az500.html
+++ b/blogs/Az500.html
@@ -1,4 +1,3 @@
-!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +5,7 @@
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-    <header>
+    <header id = "Az-Header">
         <h1>AZ-500 How To Pass and Challenges Faced</h1>
         <p>Published on July 2025</p>
         <p>By OmarDevSec</p>
@@ -15,7 +14,11 @@
         <section>
             <h2>Studying for AZ-500</h2>
             <p>Let me start by saying that I passed the AZ-500 on my second try. The certification exam was 
-                undoubtly one of the most difficult exam I've ever taken.<br> The Azure 500 Security Technologies
+                undoubtly one of the most difficult exam I've ever taken and I'm not saying this to scare you off.<br>
+                Passing this exam is very achievable, but will take an immense amount of time and effort. <br>
+                Before taking this exam you will need solid foundation of Cloud solutions and security conecpts.
+        
+                <br> The Azure 500 Security Technologies
             certification covers a wide variety of Azure Security topics, such as: <br> 
             <br>
             <ul>
