added social media links, github and linkeidn

--- a/front.html
+++ b/front.html
@@ -64,11 +64,11 @@
               <i class="ri-twitter-x-line"></i>
             </a>
 
-            <a href="https://github.com/" target = "_blank" class="nav__social-link">
+            <a href="https://github.com/OmarDEVSEC?tab=overview&from=2026-01-01&to=2026-01-11" target = "_blank" class="nav__social-link">
               <i class="ri-github-fill"></i>
             </a>
 
-            <a href="https://linkedin.com/" target = "_blank" class="nav__social-link">
+            <a href="https://www.linkedin.com/in/fullstackomar/" target = "_blank" class="nav__social-link">
               <i class="ri-linkedin-box-fill"></i>
             </a>
           </div>
