--- a/blogs/aboutme.html
+++ b/blogs/aboutme.html
@@ -10,7 +10,7 @@
         <h2>About Me</h2>
         <p>
             Hi, I'm Omar—a dedicated cybersecurity professional with a passion for technology and innovation. 
-            My interests span cybersecurity, programming, Azure Cloud, AI in security, and cloud computing. 
+            My interests span cybersecurity, programming, AI vulenrability detection, and cloud computing. 
             I am especially fascinated by the integration of AI in cybersecurity, implementing automated SIEM tools, and leveraging intelligent solutions to protect digital assets.
         </p>
         <p>
@@ -27,9 +27,9 @@
             <li>CCNA (in progress)</li>
             <li>Microsoft Certified: Security, Compliance, and Identity Fundamentals (SC-900)</li>
             <li>CompTIA A+</li>
-            <li>CompTIA Security+ (in progress)</li>
+            <li>CompTIA Security+</li>
             <li>CompTIA Network+</li>
-        </ul>
+     </ul>
         <h3>Key Interests</h3>
         <ul>
             <li>AI in Cybersecurity</li>
