completed Az-500 section

--- a/blogs/Az500.html
+++ b/blogs/Az500.html
@@ -11,16 +11,16 @@
         <p>By OmarDevSec</p>
     </header>
     <main>
-        <section>
+        <section id = "AZ-Intro">
             <h2>Studying for AZ-500</h2>
             <p>Let me start by saying that I passed the AZ-500 on my second try. The certification exam was 
                 undoubtly one of the most difficult exam I've ever taken and I'm not saying this to scare you off.<br>
                 Passing this exam is very achievable, but will take an immense amount of time and effort. <br>
-                Before taking this exam you will need solid foundation of Cloud solutions and security conecpts.
+                Before taking this exam you will need solid foundation on cloud solutions and security conecpts.
         
                 <br> The Azure 500 Security Technologies
             certification covers a wide variety of Azure Security topics, such as: <br> 
-            <br>
+            <br> 
             <ul>
                 <li>Securing Identity and Access</li>
                 <li>Secure Networking</li>
