Edit home page to align with profession and interests.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <section class="section">
                 <div class="command">$ whoami</div>
                 <div class="output">
-                    <p><span class="prompt-symbol">></span> Omar | Cybersecurity Admin & Programmer</p>
-                    <p><span class="prompt-symbol">></span> Azure | Security | Python | Linux | Full Stack Development</p>
+                    <p><span class="prompt-symbol">></span> Omar | Cybersecurity Engineer & Programmer</p>
+                    <p><span class="prompt-symbol">></span> Azure | Security | Python | Linux | AI & Machine Learning</p>
                 </div>
             </section>
 
@@ -34,7 +34,7 @@
             <section class="section">
                 <div class="command">$ cat about.txt</div>
                 <div class="output">
-                    <p><span class="prompt-symbol">></span> I'm a cybersecurity administrator and full-stack programmer passionate about building secure, scalable solutions.</p>
+                    <p><span class="prompt-symbol">></span> I'm a cybersecurity engineer and AI / Machine learning enthusiast, passionate about building secure, scalable AI solutions.</p>
                     <p><span class="prompt-symbol">></span> I specialize in Azure cloud security, network administration, and developing applications that prioritize security.</p>
                     <p><span class="prompt-symbol">></span> Always learning, always exploring new technologies in the security and development space.</p>
                 </div>
