--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <section class="section">
                 <div class="command">$ whoami</div>
                 <div class="output">
-                    <p><span class="prompt-symbol">></span> Omar | Cybersecurity Engineer & Programmer</p>
-                    <p><span class="prompt-symbol">></span> Azure | Security | Python | Linux | AI & Machine Learning</p>
+                    <p><span class="prompt-symbol">></span> Name: Omar | Cybersecurity Engineer & Programmer</p>
+                    <p><span class="prompt-symbol">></span> Interests: Azure | Security | Python | Linux | AI & Machine Learning</p>
                 </div>
             </section>
 
