Consistent styling across all blog pages and tuned html structure to be more consistent.

--- a/blogs/Az500.html
+++ b/blogs/Az500.html
@@ -1,24 +1,23 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Me - Omar</title>
+    <title>AZ-500 How To Pass - Omar</title>
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-    <header id = "Az-Header">
-        <h1>AZ-500 How To Pass and Challenges Faced</h1>
+    <section class="section" id="az-500">
+        <h2>AZ-500 How To Pass and Challenges Faced</h2>
         <p>Published on July 2025</p>
         <p>By OmarDevSec</p>
-    </header>
-    <main>
-        <section id = "AZ-Intro">
-            <h2>Studying for AZ-500</h2>
-            <p>Let me start by saying that I passed the AZ-500 on my second try. The certification exam was 
-                undoubtly one of the most difficult exam I've ever taken and I'm not saying this to scare you off.<br>
-                Passing this exam is very achievable, but will take an immense amount of time and effort. <br>
-                Before taking this exam you will need solid foundation on cloud solutions and security conecpts.
+
+        <h3>Studying for AZ-500</h3>
+        <p>Let me start by saying that I passed the AZ-500 on my second try. The certification exam was 
+            undoubtly one of the most difficult exam I've ever taken and I'm not saying this to scare you off.<br>
+            Passing this exam is very achievable, but will take an immense amount of time and effort. <br>
+            Before taking this exam you will need solid foundation on cloud solutions and security conecpts.
         
-                <br> The Azure 500 Security Technologies
+            <br> The Azure 500 Security Technologies
             certification covers a wide variety of Azure Security topics, such as: <br> 
             <br> 
             <ul>
@@ -26,29 +25,19 @@
                 <li>Secure Networking</li>
                 <li>Secure Compute, storage, and databases</li>
                 <li>Secure Azure using Defender and Sentinel</li>
-
             </ul>
-              
+        </p>
 
-            </p>
+        <h3>Key Topics Covered</h3>
+        <ul>
+            <li>Managing Identity and Access</li>
+            <li>Implementing Platform Protection</li>
+            <li>Managing Security Operations</li>
+            <li>Securing Data and Applications</li>
+        </ul>
 
-        </section>
-        <section>
-            <h2>Key Topics Covered</h2>
-            <ul>
-                <li>Managing Identity and Access</li>
-                <li>Implementing Platform Protection</li>
-                <li>Managing Security Operations</li>
-                <li>Securing Data and Applications</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Challenges Faced</h2>
-            <p>Many candidates struggle with the breadth of knowledge required for the AZ-500. It's essential to have hands-on experience with Azure services and a solid understanding of security best practices.</p>
-        </section>
-    </main>
-    <footer>
-        <p>© 2025 OmarDevSec. All rights reserved.</p>
-    </footer>
+        <h3>Challenges Faced</h3>
+        <p>Many candidates struggle with the breadth of knowledge required for the AZ-500. It's essential to have hands-on experience with Azure services and a solid understanding of security best practices.</p>
+    </section>
 </body>
 </html>
